# tcc-seguranca-codigo-ia

./: .gitignore  README.md  tcc.tex
English/Leads/: Prompt.txt
English/Leads/C++/Claude/: CMakeLists.txt  prompt.txt  report.txt  security_review.txt  vcpkg.json
English/Leads/C++/Claude/src/: auth_controller.cpp  auth_controller.h  csv_utils.cpp  csv_utils.h  firebase_client.cpp  firebase_client.h  jwt_utils.cpp  jwt_utils.h  lead_controller.cpp  lead_controller.h  main.cpp  models.h
English/Leads/C++/Claude/static/: index.html
English/Leads/C++/Claude/static/css/: style.css
English/Leads/C++/Claude/static/js/: app.js
English/Leads/C++/GPT/: CMakeLists.txt  README.md  prompt.txt  report.txt  security_review.txt
English/Leads/C++/GPT/frontend/: app.js  index.html  styles.css
English/Leads/C++/GPT/include/lead_manager/: app_config.hpp  auth_service.hpp  firestore_client.hpp  http_client.hpp  lead_service.hpp  models.hpp  utils.hpp
English/Leads/C++/GPT/src/: app_config.cpp  auth_service.cpp  firestore_client.cpp  http_client.cpp  lead_service.cpp  main.cpp  models.cpp  utils.cpp
English/Leads/Go/Claude/: go.mod  go.sum  prompt.txt  report.txt  run.bat  security_review.txt
English/Leads/Go/GPT/: .env.example  README.md  go.mod  go.sum  prompt.txt  report.txt  security_review.txt
English/Leads/Python/Claude/: prompt.txt  report.txt  security_review.txt  start_backend.bat  start_frontend.bat
English/Leads/Python/GPT/: .env.example  README.md  prompt.txt  report.txt  requirements.txt  security_review.txt
English/Stream/: Prompt.txt
English/Stream/C++/Claude/: CMakeLists.txt  build.bat  prompt.txt  report.txt  run.bat  security_review.txt  vcpkg.json
English/Stream/C++/Claude/frontend/: index.html
English/Stream/C++/Claude/frontend/css/: style.css
English/Stream/C++/Claude/frontend/js/: app.js
English/Stream/C++/Claude/include/: crypto_utils.h  firebase_client.h  jwt_auth.h  models.h
English/Stream/C++/Claude/src/: main.cpp
English/Stream/C++/GPT/: .gitignore  CMakeLists.txt  README.md  prompt.txt  report.txt  security_review.txt
English/Stream/C++/GPT/frontend/: app.js  index.html  styles.css
English/Stream/C++/GPT/include/: app_config.hpp  firebase_client.hpp  jwt_service.hpp  models.hpp  password_service.hpp  song_repository.hpp  utils.hpp
English/Stream/C++/GPT/src/: app_config.cpp  firebase_client.cpp  jwt_service.cpp  main.cpp  password_service.cpp  song_repository.cpp  utils.cpp
English/Stream/Go/Claude/: go.mod  go.sum  main.go  prompt.txt  report.txt  security_review.txt
English/Stream/Go/GPT/: .env.example  .gitignore  README.md  go.mod  go.sum  prompt.txt  report.txt  security_review.txt
English/Stream/Python/Claude/: app.py  auth.py  config.py  firebase_setup.py  prompt.txt  report.txt  requirements.txt  routes_artist.py  routes_auth.py  routes_songs.py  security_review.txt
English/Stream/Python/GPT/: .gitignore  README.md  prompt.txt  report.txt  security_review.txt
Portugues/Leads/: Prompt.txt
Portugues/Leads/C++/Claude/: CMakeLists.txt  build.bat  prompt.txt  report.txt  security_review.txt  setup.bat  vcpkg.json
Portugues/Leads/C++/Claude/frontend/: dashboard.html  index.html  lead-detail.html  leads.html
Portugues/Leads/C++/Claude/frontend/css/: style.css
Portugues/Leads/C++/Claude/frontend/js/: api.js  dashboard.js  lead-detail.js  leads.js
Portugues/Leads/C++/Claude/src/: config.h  main.cpp
Portugues/Leads/C++/Claude/src/auth/: auth_routes.cpp  auth_routes.h
Portugues/Leads/C++/Claude/src/firebase/: firebase_client.cpp  firebase_client.h
Portugues/Leads/C++/Claude/src/leads/: leads_routes.cpp  leads_routes.h
Portugues/Leads/C++/Claude/src/utils/: csv_utils.cpp  csv_utils.h  hash_utils.h  jwt_utils.cpp  jwt_utils.h
Portugues/Leads/C++/GPT/: CMakeLists.txt  README.md  prompt.txt  report.txt  security_review.txt
Portugues/Leads/C++/GPT/include/: app_config.hpp  csv_utils.hpp  firebase_client.hpp  http_client.hpp  models.hpp  security.hpp  server.hpp  utils.hpp
Portugues/Leads/C++/GPT/public/: app.js  index.html  styles.css
Portugues/Leads/C++/GPT/src/: app_config.cpp  csv_utils.cpp  firebase_client.cpp  http_client.cpp  main.cpp  security.cpp  server.cpp  utils.cpp
Portugues/Leads/Go/Claude/: .env.example  README.md  go.mod  go.sum  main.go  prompt.txt  report.txt  security_review.txt
Portugues/Leads/Go/GPT/: .env.example  .gitignore  Prompt.txt  README.md  go.mod  go.sum  report.txt  security_review.txt
Portugues/Leads/Python/Claude/: iniciar.bat  prompt.txt  report.txt  security_review.txt
Portugues/Leads/Python/GPT/: .env.example  README.md  prompt.txt  report.txt  requirements.txt  (+1 more)
Portugues/Stream/: Prompt.txt
Portugues/Stream/C++/Claude/: CMakeLists.txt  build.bat  prompt.txt  report.txt  run.bat  security_review.txt  setup.bat  vcpkg.json
Portugues/Stream/C++/Claude/backend/: config.h  main.cpp
Portugues/Stream/C++/Claude/backend/auth/: jwt_helper.cpp  jwt_helper.h
Portugues/Stream/C++/Claude/backend/db/: local_db.cpp  local_db.h
Portugues/Stream/C++/Claude/backend/firebase/: firebase_service.cpp  firebase_service.h
Portugues/Stream/C++/Claude/backend/handlers/: auth_handler.cpp  auth_handler.h  music_handler.cpp  music_handler.h  stream_handler.cpp  stream_handler.h
Portugues/Stream/C++/Claude/frontend/: index.html  register.html
Portugues/Stream/C++/Claude/frontend/artist/: dashboard.html
Portugues/Stream/C++/Claude/frontend/assets/css/: style.css
Portugues/Stream/C++/Claude/frontend/assets/js/: api.js  artist.js  user.js
Portugues/Stream/C++/Claude/frontend/user/: dashboard.html
Portugues/Stream/C++/GPT/: CMakeLists.txt  README.md  prompt.txt  report.txt  security_review.txt
Portugues/Stream/C++/GPT/frontend/: app.js  index.html  styles.css
Portugues/Stream/C++/GPT/src/: app_config.cpp  app_config.h  firebase_user_store.cpp  firebase_user_store.h  jwt_service.cpp  jwt_service.h  main.cpp  models.h  password_hasher.cpp  password_hasher.h  song_store.cpp  song_store.h  utils.cpp  utils.h
tex/: main.tex  sbc-template.bib  sbc-template.sty
(+285 files in other folders)
